timer Added, del (for in)

--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body onLoad = 'timer()'>
+
+  <div id="timer">10</div>
+
   <blockquote>  
        <p id="quote"> <!--  Тут циатата  --> </p>
        <p id="autor"> <!-- Тут автор цитаты  --> </p>   
   </blockquote>
     
-    <script src="js/script.js"></script> 
+<script src="js/script.js"></script>
 </body>
 </html>
